--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <nav class="navbar navbar-expand-lg fixed-top bg-body-tertiary" >
         <div class="container bg-light" >
-          <a class="navbar-brand" href="#"><img style="width:100px; height:80px;" src="../Images/green-leaf-1.png" alt="" srcset=""></a>
+          <a class="navbar-brand" href="#"><img style="width:100px; height:80px;" src="./Images/green-leaf-1.png" alt="" srcset=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -77,15 +77,15 @@
                    <div class="col-lg-7 m-auto">
                        <div class="row text-center">
                          <div class="col-lg-4">
-                             <img src="../Images/banana.png" alt="">
+                             <img src="./Images/banana.png" alt="">
                              <h2>NATURAL</h2>
                          </div>
                          <div class="col-lg-4">
-                          <img src="../Images/grape1.png" alt="">
+                          <img src="./Images/grape1.png" alt="">
                           <h2>NATURAL</h2>
                          </div>
                          <div class="col-lg-4">
-                          <img src="../Images/tree3.jpg" alt="">
+                          <img src="./Images/tree3.jpg" alt="">
                           <h2>NATURAL</h2>
                          </div>
                        </div>
@@ -175,7 +175,7 @@
                           <span><i class="bi bi-star-fill"></i></span>
                           <span><i class="bi bi-star-fill"></i></span>
                         </div>
-                        <img src="../Images/orange2.jpg" style="height: 200px;width: 200px; margin-left:90px;" class="pb-3" alt="">
+                        <img src="./Images/orange2.jpg" style="height: 200px;width: 200px; margin-left:90px;" class="pb-3" alt="">
                         <h4 class="head1 text-center">Orange</h4>
                         <p class="per1 text-center">2x454g/ 160z</p>
                         <h4 class="head1 text-center">&#163;43.00</h4>
@@ -192,7 +192,7 @@
                           <span><i class="bi bi-star-fill"></i></span>
                           <span><i class="bi bi-star-fill"></i></span>
                         </div>
-                        <img src="../Images/papaya.jpg"style="height: 200px;width: 200px; margin-left:90px; class="img-fluid pb-3" alt="">
+                        <img src="./Images/papaya.jpg"style="height: 200px;width: 200px; margin-left:90px; class="img-fluid pb-3" alt="">
                         <h4 class="head1 text-center">Papaya</h4>
                         <p class="per1 text-center">2x454g/ 160z</p>
                         <h4 class="head1 text-center">&#163;43.00</h4>
@@ -209,7 +209,7 @@
                           <span><i class="bi bi-star"></i></span>
                           <span><i class="bi bi-star"></i></span>
                         </div>
-                        <img src="../Images/pomegranate.jpg"style="height: 200px;width: 200px; margin-left:90px; class="img-fluid pb-3" alt="">
+                        <img src="./Images/pomegranate.jpg"style="height: 200px;width: 200px; margin-left:90px; class="img-fluid pb-3" alt="">
                         <h4 class="head1 text-center">Pomegranate</h4>
                         <p class="per1 text-center">2x454g/ 160z</p>
                         <h4 class="head1 text-center">&#163;25.00</h4>
@@ -226,7 +226,7 @@
                           <span><i class="bi bi-star-fill"></i></span>
                           <span><i class="bi bi-star"></i></span>
                         </div>
-                        <img src="../Images/pineapple1.jpg"style="height: 200px;width: 200px; margin-left:90px; class="img-fluid pb-3" alt="">
+                        <img src="./Images/pineapple1.jpg"style="height: 200px;width: 200px; margin-left:90px; class="img-fluid pb-3" alt="">
                         <h4 class="head1 text-center">Pineapple</h4>
                         <p class="per1 text-center">2x454g/ 160z</p>
                         <h4 class="head1 text-center">&#163;45.00</h4>
@@ -243,7 +243,7 @@
                           <span><i class="bi bi-star-fill"></i></span>
                           <span><i class="bi bi-star-fill"></i></span>
                         </div>
-                        <img src="../Images/blackOlive.jpg"style="height: 200px;width: 200px; margin-left:90px; class="img-fluid pb-3" alt="">
+                        <img src="./Images/blackOlive.jpg"style="height: 200px;width: 200px; margin-left:90px; class="img-fluid pb-3" alt="">
                         <h4 class="head1 text-center">Black Olive</h4>
                         <p class="per1 text-center">2x454g/ 160z</p>
                         <h4 class="head1 text-center">&#163;43.00</h4>
@@ -260,7 +260,7 @@
                           <span><i class="bi bi-star-fill"></i></span>
                           <span><i class="bi bi-star-fill"></i></span>
                         </div>
-                        <img src="../Images/starfruit.jpg"style="height: 200px;width: 200px; margin-left:90px; class="img-fluid pb-3" alt="">
+                        <img src="./Images/starfruit.jpg"style="height: 200px;width: 200px; margin-left:90px; class="img-fluid pb-3" alt="">
                         <h4 class="head1 text-center">Star Fruit</h4>
                         <p class="per1 text-center">2x454g/ 160z</p>
                         <h4 class="head1 text-center">&#163;42.00</h4>
@@ -344,7 +344,7 @@
               <div class="col-lg-6">
                 <div class="card shadow">
                   <div class="row">
-                    <div class="col-lg-6"><img src="../Images/chilli-1.png" class="img-fluid" alt=""></div>
+                    <div class="col-lg-6"><img src="./Images/chilli-1.png" class="img-fluid" alt=""></div>
 
                     <div class="col-lg-6 p-5">
                     <span><i class="bi bi-star-fill"></i></span>
@@ -362,7 +362,7 @@
               <div class="col-lg-6">
                 <div class="card shadow">
                   <div class="row">
-                    <div class="col-lg-6"><img src="../Images/lemon.jpg" class="img-fluid" alt=""></div>
+                    <div class="col-lg-6"><img src="./Images/lemon.jpg" class="img-fluid" alt=""></div>
 
                     <div class="col-lg-6 p-5">
                     <span><i class="bi bi-star-fill"></i></span>
@@ -380,7 +380,7 @@
               <div class="col-lg-6">
                 <div class="card shadow">
                   <div class="row">
-                    <div class="col-lg-6"><img src="../Images/garlic.jpg" class="img-fluid" alt=""></div>
+                    <div class="col-lg-6"><img src="./Images/garlic.jpg" class="img-fluid" alt=""></div>
 
                     <div class="col-lg-6 p-5">
                     <span><i class="bi bi-star-fill"></i></span>
@@ -398,7 +398,7 @@
               <div class="col-lg-6">
                 <div class="card">
                   <div class="row">
-                    <div class="col-lg-6"><img src="../Images/raw-onions.jpg" class="img-fluid" alt=""></div>
+                    <div class="col-lg-6"><img src="./Images/raw-onions.jpg" class="img-fluid" alt=""></div>
 
                     <div class="col-lg-6 p-5">
                     <span><i class="bi bi-star-fill"></i></span>
@@ -416,7 +416,7 @@
               <div class="col-lg-6">
                 <div class="card shadow">
                   <div class="row">
-                    <div class="col-lg-6"><img src="../Images/mint.jpg" class="img-fluid" alt=""></div>
+                    <div class="col-lg-6"><img src="./Images/mint.jpg" class="img-fluid" alt=""></div>
 
                     <div class="col-lg-6 p-5">
                     <span><i class="bi bi-star-fill"></i></span>
@@ -434,7 +434,7 @@
               <div class="col-lg-6">
                 <div class="card shadow">
                   <div class="row">
-                    <div class="col-lg-6"><img src="../Images/gApple.jpg" class="img-fluid" alt=""></div>
+                    <div class="col-lg-6"><img src="./Images/gApple.jpg" class="img-fluid" alt=""></div>
 
                     <div class="col-lg-6 p-5">
                     <span><i class="bi bi-star-fill"></i></span>
